Implement basic carousel

--- a/output/index.html
+++ b/output/index.html
@@ -88,14 +88,23 @@
                     </a>
                 </div>
                 <div class="planning">
-                    <a href="#" target="_blank" class="planning__link"><img
-                            src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
-                            width="485" height="340" class="img_g" alt=""></a>
-                    <button class="planning__left-btn"></button>
-                    <button class="planning__right-btn"></button>
-                    <div class="planning__paging">
-                        <span></span><span></span><span></span>
+                    <button class="planning__left-btn">
+                        <img src="https://static-page.kakao.com/static/pc/ic-paging-back-nor.svg?2c964bb7a6b07a7941252b32ea13f03c" alt="left">
+                    </button>
+                    <div class="planning__window">
+                        <div class="planning__container">
+                            <img src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
+                            width="485" height="340" class="img_g" alt="">
+                            <img src="//shop3.daumcdn.net/shophow/sib/0_211220165955_PwBwkpRhdDiDeqfbjVSJxZBnrWeTXRjH"
+                            width="485" height="340" class="img_g" alt="">
+                            <img src="//shop4.daumcdn.net/shophow/sib/0_211220170002_BsDsswhwKiSunNoHuZhqhJwiBptBTSBN"
+                            width="485" height="340" class="img_g" alt="">
+                        </div>
                     </div>
+                    <button class="planning__right-btn">
+                        <img src="https://static-page.kakao.com/static/pc/ic-paging-next-nor.svg?b76f34a1b77e59514735b92464295b7c" alt="left">
+                    </button>
+                    <ul class="planning__navigation-ul"></ul>
                 </div>
             </div>
             <div class="theme">
