--- a/src/pages/dummy.html
+++ b/src/pages/dummy.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/d69dc18532.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <title>Document</title>
   </head>
