--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/d69dc18532.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <title>쇼핑하우</title>
   </head>
@@ -16,10 +13,7 @@
     <header class="header">
       <div class="header__top">
         <div class="logo">
-          <img
-            alt="쇼핑하우"
-            src="//search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw_2021.png"
-          />
+          <img alt="쇼핑하우" src="//search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw_2021.png" />
         </div>
         <div class="search">
           <form>
@@ -35,9 +29,7 @@
       <nav class="header__nav">
         <div class="header__navContent">
           <div class="category">
-            <button class="category__title">
-              <i class="fas fa-bars"></i>카테고리
-            </button>
+            <button class="category__title"><i class="fas fa-bars"></i>카테고리</button>
             <ul class="category-first">
               <li></li>
               <li></li>
@@ -189,13 +181,11 @@
           고객센터 : <strong>1544-5664</strong> (평일 09:00 - 19:00)
         </p>
         <p class="footer__caution">
-          (주)카카오는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의
-          주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게
-          있습니다.<br />
+          (주)카카오는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은
+          각 판매자에게 있습니다.<br />
           최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.<br />
-          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인
-          후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기
-          바랍니다.
+          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을
+          구매해 주시기 바랍니다.
         </p>
         <div class="footer__copyright">
           Copyright ©
@@ -207,7 +197,7 @@
 
     <script>
       function makeHotDealHTML() {
-        const target = document.querySelector(".hotDeal__container");
+        const target = document.querySelector('.hotDeal__container');
         const hotdealItemTpl = `
                 <li class="product">
                     <a href="" class="product__link">
