feat. 개발용, 배포용 HTML 분리하여 live.js 선택적 적용

--- a/assets/develop.html
+++ b/assets/develop.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://livejs.com/live.js"></script>
-    <title>Document</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-</html>
 
-<body></body>
+  <body>
+    <div id="app"></div>
+  </body>
+</html>
