--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/libs/reset.css" />
-    <link rel="stylesheet" href="./styles/_global.css" />
-    <link rel="stylesheet" href="./styles/app.css" />
     <script
       src="https://kit.fontawesome.com/d69dc18532.js"
       crossorigin="anonymous"
@@ -84,18 +81,31 @@
             </a>
           </div>
           <div class="planning">
-            <a href="#" target="_blank" class="planning__link"
+            <!--<a href="#" target="_blank" class="planning__link"
               ><img
                 src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
                 width="485"
                 height="340"
                 class="img_g"
                 alt=""
-            /></a>
-            <button class="planning__left-btn"></button>
-            <button class="planning__right-btn"></button>
-            <div class="planning__paging">
-              <span></span><span></span><span></span>
+            /></a>-->
+
+            <div class="planning-box">
+              <div class="planning-list">
+                <div class="planning-item__last-clone">3</div>
+                <div class="planning-item">1</div>
+                <div class="planning-item">2</div>
+                <div class="planning-item">3</div>
+                <div class="planning-item__first-clone">1</div>
+              </div>
+            </div>
+
+            <div>
+              <button class="planning__left-btn">left</button>
+              <div class="planning__paging">
+                <span>1</span><span>2</span><span>3</span>
+              </div>
+              <button class="planning__right-btn">right</button>
             </div>
           </div>
         </div>
