--- a/output/index.html
+++ b/output/index.html
@@ -23,7 +23,16 @@
                     <button class="search__icon">🔍</button>
                 </form>
                 <ul class="search-top10">
-                    <li class="search-top10__item">3. 아디다스 런닝화</li>
+                    <li class="search-top10__item">1. 아디다스 런닝화</li>
+                    <li class="search-top10__item">2. 피라 런닝화</li>
+                    <li class="search-top10__item">3. 나이키 런닝화</li>
+                    <li class="search-top10__item">4. 리복 런닝화</li>
+                    <li class="search-top10__item">5. 샤넬 런닝화</li>
+                    <li class="search-top10__item">6. 신라면</li>
+                    <li class="search-top10__item">7. 삼양라면</li>
+                    <li class="search-top10__item">8. 진라면</li>
+                    <li class="search-top10__item">9. 무파마</li>
+                    <li class="search-top10__item">10. 열라면</li>
                 </ul>
             </div>
         </div>
