--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
-    <div class="app"></div>
+    <header class="header"></header>
+    <main class="app"></main>
   </body>
 </html>
