Add primitive Recommend and Do etc
Add primitive Recommend
Modularize fetchItemData

--- a/output/index.html
+++ b/output/index.html
@@ -138,28 +138,38 @@
                 <li class="rising-keyword__item"></li>
                 <li class="rising-keyword__item"></li>
             </ul>
-
         </div>
+
         <div class="recommendation">
-            <ul class="picked-items">
-                <li class="picked-items__item"></li>
-                <li class="picked-items__item"></li>
-                <li class="picked-items__item"></li>
-                <li class="picked-items__item"></li>
-            </ul>
-            <ul class="recommendation-items">
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-                <li class="recommendation-items__item"></li>
-            </ul>
+            <div class="recommendation__header">
+                <div class="recommendation__header__title">
+                    이 상품 어때요?
+                </div>
+                <div class="recommendation__header__more">
+                    최근 본 상품 더보기
+                </div>
+            </div>
+            <div class="recommendation__body">
+                <ul class="picked-items">
+                    <!-- <li class="picked-items__item"></li>
+                    <li class="picked-items__item"></li>
+                    <li class="picked-items__item"></li>
+                    <li class="picked-items__item"></li> -->
+                </ul>
+                <ul class="recommendation-items">
+                    <!-- <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li>
+                    <li class="recommendation-items__item"></li> -->
+                </ul>
+            </div>
         </div>
-
     </div>
+
     <footer></footer>
 </body>
 
