--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/libs/reset.css" />
-    <link rel="stylesheet" href="./styles/_global.css" />
-    <link rel="stylesheet" href="./styles/app.css" />
     <script
       src="https://kit.fontawesome.com/d69dc18532.js"
       crossorigin="anonymous"
@@ -84,18 +81,77 @@
             </a>
           </div>
           <div class="planning">
-            <a href="#" target="_blank" class="planning__link"
-              ><img
-                src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
-                width="485"
-                height="340"
-                class="img_g"
-                alt=""
-            /></a>
-            <button class="planning__left-btn"></button>
-            <button class="planning__right-btn"></button>
-            <div class="planning__paging">
-              <span></span><span></span><span></span>
+            <div class="planning-box">
+              <div class="planning-list">
+                <div class="planning-item__last-clone">
+                  <a href="#" target="_blank" class="planning__link"
+                    ><img
+                      src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu"
+                      width="485"
+                      height="340"
+                      class="img_g"
+                      alt="3"
+                  /></a>
+                </div>
+                <div class="planning-item">
+                  <a href="#" target="_blank" class="planning__link"
+                    ><img
+                      src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG"
+                      width="485"
+                      height="340"
+                      class="img_g"
+                      alt="1"
+                  /></a>
+                </div>
+                <div class="planning-item">
+                  <a href="#" target="_blank" class="planning__link"
+                    ><img
+                      src="//shop3.daumcdn.net/shophow/sib/0_211220170214_KnBppOYCunaKIzTENvoRdzZivpnaGYdc"
+                      width="485"
+                      height="340"
+                      class="img_g"
+                      alt="2"
+                  /></a>
+                </div>
+                <div class="planning-item">
+                  <a href="#" target="_blank" class="planning__link"
+                    ><img
+                      src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu"
+                      width="485"
+                      height="340"
+                      class="img_g"
+                      alt="3"
+                  /></a>
+                </div>
+                <div class="planning-item__first-clone">
+                  <a href="#" target="_blank" class="planning__link"
+                    ><img
+                      src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG"
+                      width="485"
+                      height="340"
+                      class="img_g"
+                      alt="1"
+                  /></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="planning-comm">
+              <button class="planning__left-btn">
+                <span class="planning__left-ico">이전</span>
+              </button>
+              <div class="planning__paging">
+                <span class="planning__paging-btn" data-index="0"
+                  ><span class="planning__paging-num">1</span></span
+                ><span class="planning__paging-btn" data-index="1"
+                  ><span class="planning__paging-num">2</span></span
+                ><span class="planning__paging-btn" data-index="2"
+                  ><span class="planning__paging-num">3</span></span
+                >
+              </div>
+              <button class="planning__right-btn">
+                <span class="planning__right-ico">다음</span>
+              </button>
             </div>
           </div>
         </div>
