carousel 하단 버튼 구현 완료

--- a/src/index.html
+++ b/src/index.html
@@ -141,13 +141,21 @@
                 <span class="planning__left-ico">이전</span>
               </button>
               <div class="planning__paging">
-                <span class="planning__paging-btn" data-index="0"
-                  ><span class="planning__paging-num">1</span></span
-                ><span class="planning__paging-btn" data-index="1"
-                  ><span class="planning__paging-num">2</span></span
-                ><span class="planning__paging-btn" data-index="2"
-                  ><span class="planning__paging-num">3</span></span
-                >
+                <div class="planning__paging-dummy">
+                  <em class="planning__paging-btn"
+                    ><span class="planning__paging-num">1</span></em
+                  >
+                </div>
+                <div class="planning__paging-dummy">
+                  <span class="planning__paging-btn"
+                    ><span class="planning__paging-num">2</span></span
+                  >
+                </div>
+                <div class="planning__paging-dummy">
+                  <span class="planning__paging-btn"
+                    ><span class="planning__paging-num">3</span></span
+                  >
+                </div>
               </div>
               <button class="planning__right-btn">
                 <span class="planning__right-ico">다음</span>
