Update from step2

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,16 @@
 
   <body>
     <header id="header"></header>
-    <div class="container">
+    <div id="container">
       <div class="promotion" id="promotion"></div>
       <div id="hotdeals"></div>
+    </div>
+    <footer></footer>
+    <script src="../dist/bundle.js"></script>
+  </body>
+</html>
 
-      <!-- <div class="rising-keyword">
+<!-- <div class="rising-keyword">
         <ul>
           <li class="rising-keyword__item"></li>
           <li class="rising-keyword__item"></li>
@@ -46,8 +51,3 @@
           <li class="recommendation-items__item"></li>
         </ul>
       </div> -->
-    </div>
-    <footer></footer>
-    <script src="../dist/bundle.js"></script>
-  </body>
-</html>
