Refactor Carousel to class component

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,7 @@
 
   <body>
     <header id="header"></header>
-    <div id="container">
-      <div class="promotion" id="promotion"></div>
-      <div id="hotdeals"></div>
-    </div>
+    <div id="container"></div>
     <footer></footer>
     <script src="../dist/bundle.js"></script>
   </body>
