--- a/output/index.html
+++ b/output/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <button class="planning__right-btn">
-                        <img src="https://static-page.kakao.com/static/pc/ic-paging-next-nor.svg?b76f34a1b77e59514735b92464295b7c" alt="left">
+                        <img src="https://static-page.kakao.com/static/pc/ic-paging-next-nor.svg?b76f34a1b77e59514735b92464295b7c" alt="right">
                     </button>
                     <ul class="planning__navigation-ul"></ul>
                 </div>
@@ -140,7 +140,7 @@
             </ul>
         </div>
 
-        <div class="recommendation">
+        <div class="container recommendation">
             <div class="recommendation__header">
                 <div class="recommendation__header__title">
                     이 상품 어때요?
@@ -149,22 +149,12 @@
                     최근 본 상품 더보기
                 </div>
             </div>
-            <div class="recommendation__body">
-                <ul class="picked-items">
-                    <!-- <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li> -->
+            <div class="theme recommendation__body">
+                <ul class="viewed-items">
+                    <!-- <li class="viewed-items__item"></li> -->
                 </ul>
-                <ul class="recommendation-items">
-                    <!-- <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li> -->
+                <ul class="theme-container recommendation-items">
+                    <!-- <li class="recommendation-items__item"></li> -->
                 </ul>
             </div>
         </div>
