--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
+        <title>milly의 쇼핑하우</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-
-<body>
-</body>
-
+    <body></body>
 </html>
