--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,15 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" type="image/png"
+    href="https://user-images.githubusercontent.com/50862052/148033995-92cae2c5-8d52-4e5b-bd90-d17688a8eb36.png" />
+  <title>dobby</title>
 </head>
 
-<body>
-  <header class="header-container">
-    <img src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw_2021.png"
-      class="header-logo-img" alt="쇼핑하우">
-
-  </header>
+<body id='app'>
 </body>
 
 </html>
