[lin.s] 3주차 미션 PR - 1 (#59)
* Update from step2

* Refactor header and navbar layout

* Refactor main layout to class component

* Refactor Carousel to class component

* Fix top10 carousel - async await

* Refactor code - add utils and fix top10Input carousel

Co-authored-by: lin.s <lin.s@kakaocorp.com>

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,12 @@
 
   <body>
     <header id="header"></header>
-    <div class="container">
-      <div class="promotion" id="promotion"></div>
-      <div id="hotdeals"></div>
+    <div id="container"></div>
+    <footer></footer>
+  </body>
+</html>
 
-      <!-- <div class="rising-keyword">
+<!-- <div class="rising-keyword">
         <ul>
           <li class="rising-keyword__item"></li>
           <li class="rising-keyword__item"></li>
@@ -46,8 +47,3 @@
           <li class="recommendation-items__item"></li>
         </ul>
       </div> -->
-    </div>
-    <footer></footer>
-    <script src="../dist/bundle.js"></script>
-  </body>
-</html>
