--- a/output/index.html
+++ b/output/index.html
@@ -19,12 +19,15 @@
             </div>
             <div class="search">
                 <form>
-                    <input type="text" class="search__input">
+                    <input type="text" class="search__input" id="search-input">
                     <button class="search__icon">🔍</button>
                 </form>
                 <ul class="search-top10">
                     <!-- <li class="search-top10__item">1. 아디다스 런닝화</li> -->
                 </ul>
+                <div class="search-info">
+
+                </div>
             </div>
         </div>
 
