feat: 캐로셀 구현을 위한 마크업 추가

--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,16 @@
                         </a>
                     </div>
                     <div class="planning">
-                        <div class="carousel_image_wrap"></div>
+                        <div class="carousel_image_wrap animate"></div>
+                        <div class="planning_buttons">
                         <button class="planning__left-btn"></button>
                         <button class="planning__right-btn"></button>
+                        </div>
+                        <div class="planning_small_buttons_wrap">
+                            <button class="planning_small_button active" data-idx="0"></button>
+                            <button class="planning_small_button" data-idx="1"></button>
+                            <button class="planning_small_button" data-idx="2"></button>
+                        </div>
                     </div>
                 </div>
                 <div class="theme">
