feat: 인풋박스 활성화시 아래에 렌더되어야 하는 키워드 박스에 대한 마크업 구현

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,35 @@
                     <div class="rolling_keywords_wrap">
                         <ol class="search-top10 animate"></ol>
                     </div>
+                    <div class="popular_keywords_wrap">
+                        <div class="recently_search_keywords">
+                            <strong class="keywords_title">최근 검색어</strong>
+                            <ul class="recently_search_keywords_list">
+                                <li class="keyword_list">sss</li>
+                                <li class="keyword_list">sss</li>
+                                <li class="keyword_list">sss</li>
+                                <li class="keyword_list">sss</li>
+                                <li class="keyword_list">sss</li>
+                            </ul>
+                        </div>
+                        <div class="popular_shopping_keywords">
+                            <strong class="keywords_title">인기 쇼핑 키워드</strong>
+                            <ol class="popular_shopping_keywords_list">
+                                <li class="keyword_list"><span class="num_rank">1</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">2</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">3</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">4</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">5</span>sss</li>
+                            </ol>
+                            <ol class="popular_shopping_keywords_list">
+                                <li class="keyword_list"><span class="num_rank">6</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">7</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">8</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">9</span>sss</li>
+                                <li class="keyword_list"><span class="num_rank">10</span>sss</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="header-menu">
@@ -62,8 +91,8 @@
                     <div class="planning">
                         <div class="carousel_image_wrap animate"></div>
                         <div class="planning_buttons">
-                        <button class="planning__left-btn"></button>
-                        <button class="planning__right-btn"></button>
+                            <button class="planning__left-btn"></button>
+                            <button class="planning__right-btn"></button>
                         </div>
                         <div class="planning_small_buttons_wrap">
                             <button class="planning_small_button active" data-idx="0"></button>
