search top 10 기능 초기 구현

--- a/src/index.html
+++ b/src/index.html
@@ -23,20 +23,22 @@
             <input type="text" class="search__input" />
             <button class="search__icon">🔍</button>
           </form>
-          <ol class="search-top10-list">
-            <li class="search-top10-item__last-clone"><span class="num_rank">10</span>마사지크림</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;1</span>정수기필터</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;2</span>등산스틱</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;3</span>떡갈비</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;4</span>반신욕기</li></li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;5</span>남성패딩</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;6</span>식기건조대</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;7</span>스팸선물세트</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;8</span>나이키러닝화</li>
-            <li class="search-top10-item"><span class="num_rank">&nbsp;9</span>태블릿PC</li>
-            <li class="search-top10-item"><span class="num_rank">10</span>마사지크림</li>
-            <li class="search-top10-item__first-clone"><span class="num_rank">&nbsp;1</span>정수기필터</li>
-          </ol>
+          <div class="search-top10-box">
+            <ol class="search-top10-list">
+              <li class="search-top10-item__last-clone"><span class="num_rank">10</span>마사지크림</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;1</span>정수기필터</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;2</span>등산스틱</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;3</span>떡갈비</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;4</span>반신욕기</li></li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;5</span>남성패딩</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;6</span>식기건조대</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;7</span>스팸선물세트</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;8</span>나이키러닝화</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;9</span>태블릿PC</li>
+              <li class="search-top10-item"><span class="num_rank">10</span>마사지크림</li>
+              <li class="search-top10-item__first-clone"><span class="num_rank">&nbsp;1</span>정수기필터</li>
+            </ol>
+          </div>
         </div>
       </div>
 
