[trey.lee] 3주차 미션 PR - 2 (#79)
* Reflect reviews

Refactor code to unify promise patterns
Change 'dibsed' to 'isDibsItem'
Make a method name in RecentItems to be clear

* Fix a bug where hearts do not display correctly

* Add SearchBar and Recreate Top10

* Add globals.js and Add basic SearchInfo

* Add RecentKeywordsModel

* Refactor Models

* Remove obsolete globals.js and Improve SearchBar

* Add AutocompleteModel

* Add autocomplete feature

* Highlight current keyword in autocomplete keywords

* Fix autocomplete appears even when input is empty

* Fix number of recent keywords exceeds limit

--- a/output/index.html
+++ b/output/index.html
@@ -19,21 +19,15 @@
             </div>
             <div class="search">
                 <form>
-                    <input type="text" class="search__input">
+                    <input type="text" class="search__input" id="search-input">
                     <button class="search__icon">🔍</button>
                 </form>
                 <ul class="search-top10">
-                    <li class="search-top10__item">1. 아디다스 런닝화</li>
-                    <li class="search-top10__item">2. 피라 런닝화</li>
-                    <li class="search-top10__item">3. 나이키 런닝화</li>
-                    <li class="search-top10__item">4. 리복 런닝화</li>
-                    <li class="search-top10__item">5. 샤넬 런닝화</li>
-                    <li class="search-top10__item">6. 신라면</li>
-                    <li class="search-top10__item">7. 삼양라면</li>
-                    <li class="search-top10__item">8. 진라면</li>
-                    <li class="search-top10__item">9. 무파마</li>
-                    <li class="search-top10__item">10. 열라면</li>
+                    <!-- <li class="search-top10__item">1. 아디다스 런닝화</li> -->
                 </ul>
+                <div class="search-info">
+
+                </div>
             </div>
         </div>
 
