[jade.kjo] 3주차 미션 PR - 1 (#76)
* add clean-webpack-plugin

* carousel test

* carousel left right btn complete

* makeHotDealHTML 메소드 내부 reduce 메소드 join 메소드로 수정

* carousel 하단 버튼 구현 완료

* remove debugger

* carousel refactoring

* make store object

* search top 10 기능 초기 구현

Co-authored-by: jade.kjo <jade.kjo@kakaocorp.com>

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,22 @@
             <input type="text" class="search__input" />
             <button class="search__icon">🔍</button>
           </form>
-          <ul class="search-top10">
-            <li class="search-top10__item">3. 아디다스 런닝화</li>
-          </ul>
+          <div class="search-top10-box">
+            <ol class="search-top10-list">
+              <li class="search-top10-item__last-clone"><span class="num_rank">10</span>마사지크림</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;1</span>정수기필터</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;2</span>등산스틱</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;3</span>떡갈비</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;4</span>반신욕기</li></li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;5</span>남성패딩</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;6</span>식기건조대</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;7</span>스팸선물세트</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;8</span>나이키러닝화</li>
+              <li class="search-top10-item"><span class="num_rank">&nbsp;9</span>태블릿PC</li>
+              <li class="search-top10-item"><span class="num_rank">10</span>마사지크림</li>
+              <li class="search-top10-item__first-clone"><span class="num_rank">&nbsp;1</span>정수기필터</li>
+            </ol>
+          </div>
         </div>
       </div>
 
@@ -141,13 +154,21 @@
                 <span class="planning__left-ico">이전</span>
               </button>
               <div class="planning__paging">
-                <span class="planning__paging-btn" data-index="0"
-                  ><span class="planning__paging-num">1</span></span
-                ><span class="planning__paging-btn" data-index="1"
-                  ><span class="planning__paging-num">2</span></span
-                ><span class="planning__paging-btn" data-index="2"
-                  ><span class="planning__paging-num">3</span></span
-                >
+                <div class="planning__paging-dummy">
+                  <em class="planning__paging-btn"
+                    ><span class="planning__paging-num">1</span></em
+                  >
+                </div>
+                <div class="planning__paging-dummy">
+                  <span class="planning__paging-btn"
+                    ><span class="planning__paging-num">2</span></span
+                  >
+                </div>
+                <div class="planning__paging-dummy">
+                  <span class="planning__paging-btn"
+                    ><span class="planning__paging-num">3</span></span
+                  >
+                </div>
               </div>
               <button class="planning__right-btn">
                 <span class="planning__right-ico">다음</span>
